# WorldFlow

./: .gitignore  CMakeLists.txt  README.md  adapt-notes  adapt-notes.txt  imgui.ini  kernels.txt  notes.txt  sparse_pseudo.txt  todo.txt
archive/: fluid_diffuse_density_optimized.comp  junk.glsl  main.cpp.back  old_fluid_diffuse_density_subgrid.comp  thefirstmain.cpp.back  voxelTracer.comp
assets/meshes/: glider.glb  h2.glb  h2a.glb  monkey.glb  tomcat.glb
include/: PathConfig.hpp  buffer.hpp  camera.hpp  defines.hpp  fluid_engine.hpp  fluid_engine_structs.hpp  image.hpp  path_config.h  path_config.hpp  path_config.hpp.in  random_generator.hpp  renderer.hpp  renderer_structs.hpp  shader.hpp  todo.h  transform.h  transform.hpp  uniform_fluid_engine.hpp  utils.hpp  vine_generator.hpp  vma.hpp  vulkan_create.hpp  wf_fluid_engine.hpp  wf_structs.hpp  worldflow_engine.hpp  worldflow_structs.hpp
libs/: CMakeLists.txt
libs/SDL/: CMakeLists.txt  configure
libs/vulkan/: vulkan.cppm
shaders/: addSource.comp  addSource.comp.spv  addSources.comp  advection.comp  diffusion.comp  diffusion.comp.spv  divergence.comp  gradient.comp  gradient.comp.spv  pressure.comp  random.comp  random.comp.spv  visualization.comp  visualization.comp.spv
shaders/common/: grid.comp  utils.comp
shaders/comp/: addSources.comp  advection.comp  diffusion.comp  divergence.comp  fluid_add_sources.comp  fluid_advect_density.comp  fluid_advect_flux_velocity.comp  fluid_advect_velocity.comp  fluid_compute_divergence.comp  fluid_diffuse_density.comp  fluid_diffuse_density_optimized.comp  fluid_diffuse_density_shared.comp  fluid_diffuse_density_subgrid.comp  fluid_diffuse_velocity.comp  fluid_generate_indirect_commands.comp  fluid_generate_subgrid_offsets.comp  fluid_project_incompressible.comp  fluid_prolong_density.comp  fluid_prolong_velocity.comp  fluid_restrict_pressure.comp  fluid_restrict_velocity.comp  fluid_solve_pressure.comp  grid_composite_image.comp  grid_generate_lines.comp  grid_tracer.comp  pressure.comp  random.comp  treeFlagger.comp  treePopulateIndirectCmds.comp  treeRenderer.comp  treeSubdivider.comp  vine_apply_kernel.comp  vine_apply_kernel_reaction_diffusion.comp  vine_initialize.comp  voxelTracer copy.comp  voxelTracer.comp  voxelTracerAccum.comp  voxelizer.comp  voxelizerSphere.comp
shaders/legacy/: treeFlagger.comp  treePopulateIndirectCmds.comp  treeRenderer.comp  voxelTracerAccum.comp  voxelizer.comp
shaders/raster/: line.frag  line.vert  mesh.frag  mesh.vert  particles.frag  particles.vert  voxelRaster.frag  voxelRaster.geom  voxelRaster.vert  voxel_raster.frag  voxel_raster.geom  voxel_raster.vert  voxel_raster1.geom
shared/: CMakeLists.txt  ui_tools.hpp  vk_descriptors.cpp  vk_descriptors.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
src/: buffer.cpp  camera.cpp  fluid_engine.cpp  ideal.cpp  image.cpp  main.cpp  main.cpp.back  random_generator.cpp  renderer.cpp  transform.cpp  ui_tools.cpp  uniform_fluid_engine.cpp  vine_generator.cpp  wf_fluid_engine.cpp  worldflow_engine.cpp
